# gravitysim

./: .gitignore  CMakeLists.txt  README.md  gravitysimconfig.h.in  my_nvcc
generators/: README.md  compress.gen  lattice.gen  simple_trinary.gen  sphere.gen
src/: CMakeLists.txt  basic.f.shader  basic.v.shader  ccgl.c  ccgl.h  ccgl_gl.c  ccgl_gl.h  controls.c  controls.h  gravitysim.c  gravitysim.h  gs_math.c  gs_math.h  gs_physics.c  gs_physics.h  gs_store.c  gs_store.h  instanced.f.shader  instanced.v.shader  log.c  log.h  part.c  part.h  plane.v.shader  qsort.h  render.c  render.h  render_vals.c  render_vals.h
src/kernels/: naive_opencl.cl  subsec_opencl.cl
src/phys/: naive.c  naive_cuda.cu  naive_opencl.c  naive_parallel.c  subsec.c  subsec_opencl.c
src/shaders/: basic.f.shader  basic.v.shader  instanced.f.shader  instanced.v.shader  plane.f.shader
